--- a/Invernadero/users/templates/signin.html
+++ b/Invernadero/users/templates/signin.html
@@ -38,6 +38,8 @@
         </div>
         <button type="submit">Sign in</button>
         <p class="register-text">No tienes cuenta? <a href="{% url 'signup' %}">Registrarse</a></p>
+        <!-- Enlace para recuperación de contraseña -->
+        <a href="{% url 'password_reset' %}" class="enlace-registro">¿Olvidaste tu contraseña?</a>
     </form>
 </body>
 </html>
