--- a/Invernadero/api_comunication/templates/index.html
+++ b/Invernadero/api_comunication/templates/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-    <h1>{{sensor1}}</h1> 
+    <h1>Temperatura : {{temperatura}}</h1> 
     <br>
-    <h1>{{sensor2}}</h1> 
+    <h1>Humedad Ambiente: {{humedad}}</h1> 
     <br>
-    <h1>{{sensor3}}</h1> 
+    <h1>Humedad Suelo: {{humedad_suelo}}</h1> 
 
 </body>
 </html>
