--- a/Invernadero/users/templates/signin.html
+++ b/Invernadero/users/templates/signin.html
@@ -39,7 +39,7 @@
         <button type="submit">Iniciar Sesión</button>
         <p class="register-text">No tienes cuenta? <a href="{% url 'signup' %}">Registrarse</a></p>
         <!-- Enlace para recuperación de contraseña -->
-        <a class="password-text" href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
+        <a class="password_reset" href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
     </form>
 </body>
 </html>
