--- a/Invernadero/users/static/css/login.css
+++ b/Invernadero/users/static/css/login.css
@@ -10,120 +10,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-}
-
-.container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem; 
-    box-sizing: border-box;
-}
-
-form {
-    background-color: white;
-    padding: 2rem;
-    border-radius: 15px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 90%;
-    max-width: 360px;
-    box-sizing: border-box;
-    position: relative;
-    animation: fadeIn 0.6s ease-in-out;
-}
-
-
-.plantita {
-    position: absolute;
-    top: -60px;
-    left: 25%;
-    transform: translateX(-50%);
-    width: 60px;
-    height: 60px;
-}
-
-.plantita svg {
-    width: 100%;
-    height: 100%;
-}
-
-h1 {
-    color: #2f7a4e;
-    font-size: 24px;
-    margin-top: 2.5rem;
-    margin-bottom: 0.5rem;
-}
-
-h2 {
-    color: #3f8c5d;
-    font-size: 18px;
-    margin-bottom: 1.5rem;
-}
-
-.form-group {
-    margin-bottom: 1rem;
-    text-align: left;
-    font-size: 14px;
-    color: #333;
-}
-
-.form-group input {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #bcd9c7;
-    border-radius: 8px;
-    background-color: #eaf4ed;
-    font-size: 1rem;
-    box-sizing: border-box;
-}
-
-button {
-    width: 100%;
-    padding: 0.6rem;
-    background-color: #2f7a4e;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 1rem;
-}
-
-button:hover {
-    background-color: #256440;
-}
-
-.register-text {
-    margin-top: 1rem;
-    font-size: 13px;
-    color: #555;
-}
-
-.register-text a {
-    color: #2f7a4e;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.register-text a:hover {
-    text-decoration: underline;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f4faf5;
-    background-image: url("/static/img/fondologin.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     flex-direction: column;
 }
 
@@ -176,6 +62,11 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
+a.password_reset {
+    color: #256440;
+}
+
+
 .form-group {
     margin-bottom: 1rem;
     text-align: left;
@@ -225,6 +116,8 @@ button:hover {
 .register-text a:hover {
     text-decoration: underline;
 }
+
+
 
 /* Media Queries */
 @media (max-width: 768px) {
