insertar datos bs parametros

--- a/Invernadero/Windows/templates/contacto.html
+++ b/Invernadero/Windows/templates/contacto.html
@@ -29,7 +29,7 @@
       <ul>
         <li><strong>Walter Casarino</strong> – Encargado del Frontend (Maquetación y diseño de la interfaz)</li>
         <li><strong>Bautista Insaurralde</strong> – Encargado del Backend y parte del Frontend (Funcionalidades, seguridad de la página, diseño)</li>
-        <li><strong>Thiago Herrera</strong> – Parte del Backend (Desarrollo de funcionalidades de la página)</li>
+        <li><strong>Thiago Herrera</strong> – Encargado de IA y parte del Backend (Desarrollo de funcionalidades de la página, creacion de IA y base de datos)</li>
         <li><strong>Manuel Gonzales</strong> – Encargado del Backend (Desarrollo de APIs, código de sensores, base de datos)</li>
         <li><strong>Santiago Gómez</strong> – Encargado de Hardware y Funciones de los Sensores (Armado del invernadero y sensores)</li>
       </ul>
