--- a/Invernadero/users/templates/signin.html
+++ b/Invernadero/users/templates/signin.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
-    <form action="/signin/" method="POST">
+
+    <a href="{% url 'landing' %}" class="back-link">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30" height="30" fill="none" stroke="#2f7a4e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M19 12H5"></path>
+                <path d="M12 19l-7-7 7-7"></path>
+            </svg>
+        </a>
+     
+    <form action="{% url 'signin' %}" method="POST">
 
         <div class="plantita">
             <!-- SVG de la plantita -->
@@ -24,7 +32,7 @@
                 <path style="fill:#A2CE86;" d="M104.561,9.502c-1.03,1.551-1.642,3.389-1.696,5.339c-0.541,19.805,4.442,40.438,14.41,59.669c3.304,6.375,7.135,12.545,11.44,18.45c8.928,12.247,19.888,23.345,32.375,32.702c18.508,13.868,39.738,23.443,61.396,27.689c21.256,4.166,42.459,3.155,61.314-2.926c1.93-0.622,3.57-1.79,4.784-3.295L104.561,9.502z"/>
             </svg>
         </div>
-        
+
         <h1>GreenHouse</h1>
         <h2>Inicio de Sesión</h2>
         {% csrf_token %}
@@ -37,6 +45,9 @@
             <input type="password" id="password" name="password" required>
         </div>
         <button type="submit">Iniciar Sesión</button>
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
         <p class="register-text">No tienes cuenta? <a href="{% url 'signup' %}">Registrarse</a></p>
         <!-- Enlace para recuperación de contraseña -->
         <a class="password_reset" href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
