--- a/Invernadero/Windows/templates/landing.html
+++ b/Invernadero/Windows/templates/landing.html
@@ -16,6 +16,7 @@
       <a href="{%url 'funciones' %}">Funciones</a>
       <a href="{%url 'equipos' %}">Equipos</a>
       <a href="{%url 'contacto' %}">Contáctanos</a>
+      <a href="{%url 'estadisticas' %}">Estadisticas</a>
     </nav>
     <button class="user-btn" onclick="window.location.href='{% url 'signin' %}'">Iniciar Sesión</button>
   </header>
