--- a/Invernadero/Windows/templates/equipos.html
+++ b/Invernadero/Windows/templates/equipos.html
@@ -10,12 +10,13 @@
 <body>
 
   <!-- NAVBAR -->
-  <header class="navbar">
-    <div class="logo">FloraCore</div>
+  <header class="navbar"><
+    <div class="logo">FloraCsore</div>
     <nav class="menu">
-      <a href="{% url 'landing' %}">Inicio</a>
-      <a href="{% url 'funciones' %}">Funciones</a>
-      <a href="{% url 'contacto' %}">Contáctanos</a>
+     <a href="{%url 'funciones' %}">Funciones</a>
+     <a href="{%url 'equipos' %}">Equipos</a>
+     <a href="{%url 'contacto' %}">Contáctanos</a>
+     <a href="{%url 'estadisticas' %}">Estadisticas</a>
     </nav>
     <button class="user-btn" onclick="window.location.href='{% url 'signin' %}'">Iniciar Sesión</button>
   </header>
