--- a/Invernadero/Windows/templates/funciones.html
+++ b/Invernadero/Windows/templates/funciones.html
@@ -13,7 +13,7 @@
   <header class="navbar">
     <div><a class="logo" href="{% url 'landing'%}">FloraCore</a></div>
     <nav class="menu">
-     <a href="{% url 'landing' %}">Inicio</a>
+      <a href="{% url 'landing' %}">Inicio</a>
       <a href="{% url 'funciones' %}">Funciones</a>
       <a href="{% url 'equipos' %}">Equipos</a>
       <a href="{% url 'contacto' %}">Contáctanos</a>
@@ -35,14 +35,14 @@
           <li>Sensores de temperatura interna y externa</li>
           <li>Sensores de luz para detectar la necesidad de iluminación</li>
           <li>Sensores de ventilación para renovar el aire</li>
-          <li>Microcontrolador ST32 que procesa los datos y ejecuta acciones</li>
+          <li>Microcontrolador ESP32 que procesa los datos y ejecuta acciones</li>
         </ul>
       </section>
 
       <section class="bloque">
         <i class="fas fa-gears icono"></i>
         <h2>¿Cómo funciona?</h2>
-        <p>Los sensores monitorean continuamente las condiciones del entorno y del cultivo. El microcontrolador ST32, programado mediante Arduino IDE, interpreta esta información y activa automáticamente:</p>
+        <p>Los sensores monitorean continuamente las condiciones del entorno y del cultivo. El microcontrolador ESP32, programado mediante Arduino IDE, interpreta esta información y activa automáticamente:</p>
         <ul>
           <li>El riego si la planta necesita agua</li>
           <li>La ventilación si el aire está viciado o caliente</li>
