--- a/Invernadero/Windows/templates/info.html
+++ b/Invernadero/Windows/templates/info.html
@@ -23,10 +23,10 @@
 
   <main class="project-info">
     <h2>¿Qué es FloraCore?</h2>
-    <p>FloraCore es un innovador invernadero inteligente que utiliza sensores avanzados y un microcontrolador ST32 para automatizar el cuidado de plantas. Ideal para quienes no tienen tiempo o experiencia en jardinería, FloraCore permite que cualquier persona pueda cuidar sus plantas de manera eficiente, incluso en entornos cerrados o urbanos.</p>
+    <p>FloraCore es un innovador invernadero inteligente que utiliza sensores avanzados y un microcontrolador ESP32 para automatizar el cuidado de plantas. Ideal para quienes no tienen tiempo o experiencia en jardinería, FloraCore permite que cualquier persona pueda cuidar sus plantas de manera eficiente, incluso en entornos cerrados o urbanos.</p>
     
     <h2>¿Cómo Funciona?</h2>
-    <p>FloraCore utiliza una red de sensores que monitorean las condiciones del aire, la temperatura, la humedad y la luz, así como el estado del suelo. Estos datos son procesados por un microcontrolador ST32, que toma decisiones automáticas, como activar el riego, la ventilación o la iluminación, según sea necesario.</p>
+    <p>FloraCore utiliza una red de sensores que monitorean las condiciones del aire, la temperatura, la humedad y la luz, así como el estado del suelo. Estos datos son procesados por un microcontrolador ESP32, que toma decisiones automáticas, como activar el riego, la ventilación o la iluminación, según sea necesario.</p>
     
     <h2>Objetivo</h2>
     <p>El principal objetivo de FloraCore es facilitar el cultivo autónomo de plantas en cualquier ambiente, asegurando que se mantengan en condiciones óptimas. Esto hace posible que personas sin tiempo o conocimiento en jardinería puedan cuidar plantas, incluso árboles, sin esfuerzo.</p>
