--- a/Invernadero/Windows/templates/post-login/home.html
+++ b/Invernadero/Windows/templates/post-login/home.html
@@ -13,10 +13,10 @@
   <nav class="navbar">
     <a href="#" class="logo">FloraCore</a>
     <div class="menu">
-      <a href="#"><i class="fas fa-user"></i> Perfil</a>
-      <a href="#"><i class="fas fa-image"></i> Histo. de Cultivo</a>
-      <a href="#"><i class="fas fa-bell"></i> Notificaciones</a>
-      <a href="#"><i class="fas fa-chart-line"></i> Estadísticas</a>
+      <a href="{% url 'perfil' %}"><i class="fas fa-user"></i> Perfil</a>
+      <a href="{%url 'planta'%}"><i class="fas fa-image"></i> Mi Planta</a>
+      <a href="{%url 'notificaciones' %}"><i class="fas fa-bell"></i> Notificaciones</a>
+      <a href="{%url 'estadisticas' %}"><i class="fas fa-chart-line"></i> Estadísticas</a>
       <a href="#"><i class="fas fa-question-circle"></i> Ayuda/Soporte</a>
     </div>
     <form action="{% url 'logout' %}" method="post">
@@ -30,9 +30,9 @@
     <div class="hero-text">
       <h1>¡Hola {{ user.username }}!</h1>
       <p>Bienvenido de nuevo a tu invernadero inteligente. Aquí puedes controlar y monitorear el estado de tus cultivos.</p>
-      <button onclick="location.href='#estadisticas'">Ver estadísticas</button>
+      <button onclick="window.location.href='{% url 'estadisticas' %}'">Ver estadísticas</button>
     </div>
-    <img src="{% static 'img/invernadero-home.png' %}" alt="Ilustración invernadero">
+    <img src="{% static 'img/invernadero-home.webp' %}" alt="Ilustración invernadero">
   </section>
 
   <!-- SECCIÓN INFO -->
@@ -40,17 +40,17 @@
     <h2>¿Qué puedes hacer hoy?</h2>
     <div class="cards">
       <div class="card">
-        <img src="{% static 'img/perfil.jpg' %}" alt="Perfil">
+        <img src="{% static 'img/user-home.webp' %}" alt="Perfil">
         <h3>Perfil</h3>
         <p>Consulta y edita tu información personal y tus configuraciones.</p>
       </div>
       <div class="card">
-        <img src="{% static 'img/historial.jpg' %}" alt="Historial">
+        <img src="{% static 'img/historial-home.webp' %}" alt="Historial">
         <h3>Historial de Cultivo</h3>
         <p>Revisa el crecimiento y cuidado de tus plantas a lo largo del tiempo.</p>
       </div>
       <div class="card">
-        <img src="{% static 'img/notificaciones.jpg' %}" alt="Notificaciones">
+        <img src="{% static 'img/notis-home.webp' %}" alt="Notificaciones">
         <h3>Notificaciones</h3>
         <p>Recibe alertas sobre riego, luz y temperatura.</p>
       </div>
